Fix Yoda alignment on small viewports

--- a/css/style.scss
+++ b/css/style.scss
@@ -139,6 +139,21 @@ th, td{
   .small-screen{
     display: None;
   }
+
+  // #yoda{
+  //   display: block;
+  //   margin-left: auto;
+  //   margin-right: auto;
+  // }
+}
+
+@media (max-width: 768px) {
+
+  #yoda{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 %flagbar{
